# cricket-hunting

./: .gitignore  README.md  gen_video.py  generate_video.py  play_track.py  pyproject.toml  requirements.txt  run_game.py
model/: agent.py  env.py  game.py  strategy.py
pose/: analysis.py  load_data.py
utils/: constants.py  curation.py  data_loader.py  data_struct.py  plottools.py
