[tool.poetry]
name = "cricket-hunting"
version = "0.1.0"
description = ""
authors = ["lingqiz <zlqzcc@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
opencv-python = "4.9.0.80"
pandas = "2.2.3"
pygame = "2.6.0"
scipy = "1.14.1"
tqdm = "4.66.1"
numpy = "^2.1.3"
matplotlib = "^3.9.3"


[tool.poetry.group.dev.dependencies]
jupyterlab = "^4.3.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
