[tool.poetry]
name = "cricket-hunting"
version = "0.1.0"
description = ""
authors = ["lingqiz <zlqzcc@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
pandas = "2.2.3"
scipy = "1.14.1"
tqdm = "4.66.1"
matplotlib = "^3.9.3"
opencv-python = "^4.10.0.84"
numpy = "^2.1.3"
pygame-ce = "^2.5.2"


[tool.poetry.group.dev.dependencies]
jupyterlab = "^4.3.2"
seaborn = "^0.13.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
