[tool.poetry]
name = "cricket-hunting"
version = "0.1.0"
description = ""
authors = ["lingqiz <zlqzcc@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
pandas = "2.2.3"
scipy = "1.14.1"
tqdm = "4.66.1"
matplotlib = "^3.9.3"
opencv-python = "^4.10.0.84"
numpy = "^2.1.3"
pygame-ce = "^2.5.2"
scikit-learn = "^1.6.1"
pywavelets = "^1.8.0"
umap-learn = "^0.5.7"
tensorly = "^0.9.0"
torch = "^2.6.0"
torchvision = "^0.21.0"
torchaudio = "^2.6.0"
cupy-cuda12x = "^13.4.0"
simple-term-menu = "^1.6.6"


[tool.poetry.group.dev.dependencies]
jupyterlab = "^4.3.2"
seaborn = "^0.13.2"
ipywidgets = "^8.1.5"
widgetsnbextension = "^4.0.13"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
